# KmapSolver

./: CMakeLists.txt  KMapSolver.sln  Makefile  README.md
KMapSolver/: CMakeLists.txt  KMapSolver.vcxproj  KMapSolver.vcxproj.filters  Kmap1.txt  Kmap2.txt  Kmap3.txt  Kmap4.txt  Makefile
KMapSolver/Debug/: KMapSolver.exe.recipe  kmap.obj.enc  vc142.idb
KMapSolver/Debug/KMapSolver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  KMapSolver.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
KMapSolver/Release/: KMapSolver.exe.recipe  KMapSolver.iobj  KMapSolver.ipdb
KMapSolver/Release/KMapSolver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  KMapSolver.lastbuildstate  KMapSolver.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
KMapSolver/headers/: Kmap.h  MapsManager.h
KMapSolver/headers/Engine/: Button.h
KMapSolver/src/: Application.h  Button.h  Kmap.cpp  Kmap.h  MapsManager.cpp  MapsManager.h  States.h  TruthTable.cpp  TruthTable.h  main.cpp
KMapSolver/src/Engine/: Application.cpp  Application.h  Button.cpp  States.h
Release/: KMapSolver.iobj  KMapSolver.ipdb  Release.rar
